<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UberHero</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="alter">Alter Egos</string>
    <string name="info">Information</string>
    <string name="infos">About UberHero</string>
    <string name="superName">Superhero Name</string>
    <string name="supernames">What\'\s Your Superhero Name</string>
    <string name="quiz">Which Superhero are you?</string>
    <string name="rss">RSS Feed</string>
    <string name="logo">Logo Evolution</string>
    <string name="aboutHeroes">About Heroes</string>
	<string name="themeSongs">Theme Songs</string>
	<string name="dictionary">Glossary</string>
	<string name="author">About Author</string>
	<string name="answer">Answer \n
	    				  Goes Here</string>
	<string name="nameQues">If You Were Batman \r\n
	    					Your Superhero Name Would Be?</string>
	<string name ="myscroll">exceptional-but-not-superhuman fictional characters like Batman, Doc Savage and Green Arrow may be classified as superheroes although they do not have any actual superpowers, </string>
	<string name="gloss">
        					<strong>Alien</strong> - different in nature or character \r\n
        					\r\n
        					Alter Ego -	characters whose alter ego is not known to everyone, superhero secret identities are often considered alter egos \r\n
        					\r\n
        					Antagonist - a person or a group of people who oppose the main character(s) \r\n
        					\r\n
        					Archenemy - a principal enemy   \r\n
        					\r\n
        					Extraterrestrial - coming from or existing outside the earth or its atmosphere \r\n
        					\r\n
        					Fortress - any place of exceptional security; stronghold \r\n
        					\r\n
        					Henchmen - a lackey, always there to do the master\'s bidding \r\n
        					\r\n\
        					Lair - a secluded or hidden place, especially a secret retreat or base of operations; a hideout or hideaway \r\n
        					\r\n
        					Nemisis - an opponent or rival whom a person cannot best or overcome \r\n
        					\r\n
        					Protagonist - the main character, often the \"good guy\" \r\n\
        					\r\n\
        					Secret Identity - a character develops a separate persona  \r\n
        					\r\n
        					SideKick - assistants to crime-fighting heroes \r\n
        					\r\n
        					Superhero - character possessing extraordinary talents, supernatural phenomena, or superhuman powers and dedicated to protecting the public. \r\n\
        					\r\n\
        					Superpower - superhuman ability \r\n
        					\r\n
        					Villain - a character who tends to have a negative effect on other characters \r\n
        					</string>
    <string name="mh_ah">Advanced Telepathy, Telekenisis, Density Control, Regenerative Ability, Directed Energy Attacks, Strength, Endurance, Phase Shifting, Shape Size, Xray Vision, Forcefield Protection, Invisibility, Flight, Speed</string>
	<string name="aq_ah">Super Strength, Durability, Control over Sea Life, Exceptional Swimming Ability, Water Breathing</string>
	<string name="ah_alias">King of the 7 Seas, The \"Dweller in the Depths\", Aquatic Ace, Marine Marvel</string>
	<string name="bm_ah">Exceptional Martial Arts and Combat Strategy Skills, Inexhaustible Wealth, Brillian Deductive Reasoning Skill, Advanced Technology </string>
	<string name="bm_alias">Dark Knight, Caped Crusader</string>
	<string name="ww_ah">Super Strength, Invunerability, Flight, Combat Skill and Strategy, Superhuman Agility, Healing Factor, Magic Weaponry </string>
	<string name="ww_alias">Diane Prince, Amazon Princess</string>
	<string name="sm_ah">Super Strength, Invunerability, Flight, Super Speed, Superhuman Hearing, Heat Vision, Healing Factor </string>
	<string name="sm_alias">Clark Kent, Man of Steel</string>
	<string name="gl_ah">Hard Light Constructs, Instant Weaponry, Force Fields, Flight, Durability, Alien Technology</string>
	<string name="gl_alias">Alan Wellington Scott, Sentinel, The White King, Parallax, Spectre</string>
	<string name="flash_ah">Superhuman Speed, Superhuman Agility, Intangibility, Cosmic Treadmill Time Travel</string>
	<string name="flash_alias">Scarlet Speedster, The Fastest Man Alive</string>
	<string name="bb_ah">Transformation, Shapeshifts into any animal</string>
	<string name="bb_alias">BB, Craig, Changeling</string>
	<string name="cy_ah">High IQ, Integrated Advanced Weaponry, Shape Change, Superhuman Speed, Superhuman Strength, Superhuman Endurance, Superhuman Sight, Technopathy, Super Agility, Radar Sense, Communicate/Manipulate/Interface with most Technology</string>
	<string name="cy_alias">Vic, Cyberion, Man Machine, Cy, Stone, Omega Drone, Corky</string>
	<string name="ga_ah">Agility, Escape Artist, Trick Arrows, Tracking, Stealth</string>
	<string name="ga_alias">Emerald Archer, The Dark Hunter, Robin Hood, The Hood, The Ace Archer</string>
	<string name="rob_ah">Agility, Gadgets, Intellect, Weapon Master</string>
	<string name="rob_alias">Boy Wonder, The Teen Wonder, Teenage Thunderbolt</string>
	<string name="sha_ah">Agility, Blast Power, Flight, Hypnosis,Immortality, Teleportation, Tracking, Magic, Super Speed</string>
	<string name="sha_alias">Captain Marvel, Lord Marvel</string>
	<string name="hg_ah">Flight, Enhanced Strength, Healing Factor, Weapons Expert, Combat, Reincarnation</string>
	<string name="hg_alias">Kendra Saunders, Sheira, Reincarnate Chay-era</string>
	<string name="sf_ah">Flight, Agility, Blast Power, Combat Specialist, Invulnerability, Omni-lingual, Super Sight, Super Strength</string>
	<string name="sf_alias">Princess, Queen</string>
	<string name="nw_ah">Agility, Attractive Male, Escape Artist, Gadgets, Stealth, Unarmed Combat, Weapon Master</string>
	<string name="nw_alias">Robin, The Worlds Greatest Acrobat, The Target, Robbie Malone, Renegade, The Boy Wonder</string>
	<string name="rave_ah">Astral Projection, Precognition, Flight, Leviation, Phasing, Empathy, Teleportation, Telekinesis</string>
	<string name="rave_alias">Daughter of Trigon, Evil Avatar, Dark Raven, Rachel Roth</string>
</resources>